Update notebook for building Qwen3X

--- a/codec-bpe/qwen3x.ipynb
+++ b/codec-bpe/qwen3x.ipynb
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved files: ['special_tokens_map.json', 'vocab.json', 'merges.txt', 'chat_template.jinja', 'tokenizer.json', 'tokenizer_config.json', 'added_tokens.json']\n",
+      "Saved files: ['tokenizer_config.json', 'added_tokens.json', 'tokenizer.json', 'chat_template.jinja', 'vocab.json', 'special_tokens_map.json', 'merges.txt']\n",
       "[vocab] '<|endoftext|>' not found in vocab\n",
       "[added_tokens] Swapped '<|endoftext|>' to '<|end_of_text|>'\n",
       "[special_tokens_map] Before: {'additional_special_tokens': ['<|im_start|>', '<|im_end|>', '<|object_ref_start|>', '<|object_ref_end|>', '<|box_start|>', '<|box_end|>', '<|quad_start|>', '<|quad_end|>', '<|vision_start|>', '<|vision_end|>', '<|vision_pad|>', '<|image_pad|>', '<|video_pad|>'], 'eos_token': {'content': '<|endoftext|>', 'lstrip': False, 'normalized': False, 'rstrip': False, 'single_word': False}, 'pad_token': {'content': '<|endoftext|>', 'lstrip': False, 'normalized': False, 'rstrip': False, 'single_word': False}}\n",
@@ -185,17 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "8ce253e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"<|begin_of_text|>Hello how are you<|end_of_text|>\""
+    "text = \"<|begin_of_text|>[2]Hello how are you<|end_of_text|>\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "25316056",
    "metadata": {},
    "outputs": [
@@ -204,11 +204,14 @@
      "output_type": "stream",
      "text": [
       "0: <|begin_of_text|>, token_id: 151670\n",
-      "1: Hello, token_id: 9707\n",
-      "2:  how, token_id: 1246\n",
-      "3:  are, token_id: 525\n",
-      "4:  you, token_id: 498\n",
-      "5: <|end_of_text|>, token_id: 151643\n"
+      "1: [, token_id: 58\n",
+      "2: 2, token_id: 17\n",
+      "3: ], token_id: 60\n",
+      "4: Hello, token_id: 9707\n",
+      "5:  how, token_id: 1246\n",
+      "6:  are, token_id: 525\n",
+      "7:  you, token_id: 498\n",
+      "8: <|end_of_text|>, token_id: 151643\n"
      ]
     }
    ],
@@ -219,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "23fe6c6c",
    "metadata": {},
    "outputs": [
@@ -229,11 +232,14 @@
      "text": [
       "0: <|begin_of_text|>\n",
       "1: <|begin_of_text|>\n",
-      "2: Hello\n",
-      "3:  how\n",
-      "4:  are\n",
-      "5:  you\n",
-      "6: <|end_of_text|>\n"
+      "2: [\n",
+      "3: 3\n",
+      "4: ]\n",
+      "5: Hello\n",
+      "6:  how\n",
+      "7:  are\n",
+      "8:  you\n",
+      "9: <|end_of_text|>\n"
      ]
     }
    ],
@@ -244,33 +250,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "595816fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Upload modified qwen3 tokenizer to Hugging Face\n",
+    "# repo_name = \"potsawee/qwen3x-tokenizer\"  # Change this to your desired repo name\n",
+    "# qwen3_tokenizer.push_to_hub(repo_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdda1e6b",
+   "metadata": {},
+   "source": [
+    "## Build qwen3x-mimi model\n",
+    "- Qwen3x = Qwen3 + vocab expanded by Mimi 8 codebooks "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "910064c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://github.com/QwenLM/Qwen3/issues/29\n",
+    "# Tokenizer size and embedding size mismatch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "33e0bc14",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Files (1 / 1): 100%|██████████| 11.4MB / 11.4MB, 1.33MB/s  \n",
-      "New Data Upload: |          |  0.00B /  0.00B,  0.00B/s  \n"
+      "/nlp/scr/potsawee/envs/env05/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/nlp/scr/potsawee/envs/env05/lib/python3.10/site-packages/transformers/utils/hub.py:111: FutureWarning: Using `TRANSFORMERS_CACHE` is deprecated and will be removed in v5 of Transformers. Use `HF_HOME` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "from transformers import AutoModelForCausalLM\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1cb62a50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_size = \"1.7B\" # 0.6B, 1.7B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6bab0f20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vocab size 1  : 151643\n",
+      "vocab size 2  : 151669\n",
+      "embedding size: 151936\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = f\"Qwen/Qwen3-{model_size}-Base\"\n",
+    "qwen3_model = AutoModelForCausalLM.from_pretrained(model_name, torch_dtype=torch.bfloat16)\n",
+    "qwen3_tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "print(\"vocab size 1  :\", qwen3_tokenizer.vocab_size)\n",
+    "print(\"vocab size 2  :\", len(qwen3_tokenizer))\n",
+    "print(\"embedding size:\", qwen3_model.model.embed_tokens.weight.shape[0])\n",
+    "# The first one refers to the vocab size without special tokens, while the second includes them. The embedding size is larger with padding tokens due to distributed training in our pretraining stage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4e1ae21d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vocab size 1 : 151643\n",
+      "vocab size 2 : 168059\n"
+     ]
+    }
+   ],
+   "source": [
+    "qwen3x_tokenizer = AutoTokenizer.from_pretrained(\"potsawee/qwen3x-mimi-bpe-8cb-16k-tokenizer\")\n",
+    "print(\"vocab size 1 :\", qwen3x_tokenizer.vocab_size)\n",
+    "print(\"vocab size 2 :\", len(qwen3x_tokenizer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "03beb561",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "168059\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 151669 -- original vocab size\n",
+    "# 2048*8 -- vocab size from 8 Mimi codebooks\n",
+    "# 4 -- <|audio_start|> <|audio_end|> <|text_start|> <|text_end|>\n",
+    "# 2 -- <|begin_of_text|> <|end_of_text|>\n",
+    "print(151669 + 2048*8 + 4 + 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "4fca132f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so I need the embedding size of qwen3x model to be at least 168059\n",
+    "# Marin will handle padding automatically -- confirmed with the first \"ws\" experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "953ed67c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In the last cell, I want you the extend the current embedding of qwen3_model.model.embed_tokens.weight from 151936 to 168059\n",
+    "\n",
+    "# And for the expanded embedding, the positions [0,1,...,151668] should have the values copied over from the original embedding, while the positions [151669, 151670, 151671, ..., 168058] should be freshly initialized (i.e., from scratch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "18559636",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original embedding shape: torch.Size([151936, 2048])\n",
+      "Original embedding dtype: torch.bfloat16\n",
+      "New embedding shape: torch.Size([168059, 2048])\n",
+      "New embedding dtype: torch.bfloat16\n",
+      "Mean embedding shape: torch.Size([2048])\n",
+      "\n",
+      "--- Summary ---\n",
+      "New embedding size: 168059\n",
+      "New embedding dtype: torch.bfloat16\n",
+      "New lm_head size: 168059\n",
+      "New lm_head dtype: torch.bfloat16\n",
+      "Copied 151669 embeddings from original (positions 0 to 151668)\n",
+      "Initialized 16390 new embeddings (positions 151669 to 168058) with mean + Gaussian noise (std=0.02)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# Get original embedding\n",
+    "original_embed = qwen3_model.model.embed_tokens.weight\n",
+    "print(f\"Original embedding shape: {original_embed.shape}\")\n",
+    "print(f\"Original embedding dtype: {original_embed.dtype}\")\n",
+    "\n",
+    "# Original dimensions\n",
+    "original_vocab_size = original_embed.shape[0]  # 151936\n",
+    "hidden_dim = original_embed.shape[1]\n",
+    "dtype = original_embed.dtype  # bfloat16\n",
+    "\n",
+    "# New dimensions\n",
+    "new_vocab_size = 168059\n",
+    "num_tokens_to_copy = 151669  # Copy positions [0, 1, ..., 151668]\n",
+    "num_new_tokens = new_vocab_size - num_tokens_to_copy\n",
+    "\n",
+    "# Create new embedding layer in bfloat16\n",
+    "new_embed = nn.Embedding(new_vocab_size, hidden_dim, dtype=dtype)\n",
+    "print(f\"New embedding shape: {new_embed.weight.shape}\")\n",
+    "print(f\"New embedding dtype: {new_embed.weight.dtype}\")\n",
+    "\n",
+    "# Compute mean embedding from positions [0, ..., 151668]\n",
+    "mean_embedding = original_embed[:num_tokens_to_copy].mean(dim=0)\n",
+    "print(f\"Mean embedding shape: {mean_embedding.shape}\")\n",
+    "\n",
+    "# Small Gaussian noise std (you can adjust this)\n",
+    "noise_std = 0.02\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    # Copy over the first 151669 embeddings from original\n",
+    "    new_embed.weight[:num_tokens_to_copy] = original_embed[:num_tokens_to_copy].clone()\n",
+    "    \n",
+    "    # Initialize new positions with mean + small Gaussian noise (in bfloat16)\n",
+    "    noise = (torch.randn(num_new_tokens, hidden_dim) * noise_std).to(dtype)\n",
+    "    new_embed.weight[num_tokens_to_copy:] = mean_embedding.unsqueeze(0) + noise\n",
+    "\n",
+    "# Replace the embedding layer in the model\n",
+    "qwen3_model.model.embed_tokens = new_embed\n",
+    "\n",
+    "# Also update lm_head to match the new vocabulary size\n",
+    "original_lm_head = qwen3_model.lm_head.weight\n",
+    "mean_lm_head = original_lm_head[:num_tokens_to_copy].mean(dim=0)\n",
+    "\n",
+    "new_lm_head = nn.Linear(hidden_dim, new_vocab_size, bias=False, dtype=dtype)\n",
+    "with torch.no_grad():\n",
+    "    new_lm_head.weight[:num_tokens_to_copy] = original_lm_head[:num_tokens_to_copy].clone()\n",
+    "    noise = (torch.randn(num_new_tokens, hidden_dim) * noise_std).to(dtype)\n",
+    "    new_lm_head.weight[num_tokens_to_copy:] = mean_lm_head.unsqueeze(0) + noise\n",
+    "qwen3_model.lm_head = new_lm_head\n",
+    "\n",
+    "# Update model config\n",
+    "qwen3_model.config.vocab_size = new_vocab_size\n",
+    "\n",
+    "print(f\"\\n--- Summary ---\")\n",
+    "print(f\"New embedding size: {qwen3_model.model.embed_tokens.weight.shape[0]}\")\n",
+    "print(f\"New embedding dtype: {qwen3_model.model.embed_tokens.weight.dtype}\")\n",
+    "print(f\"New lm_head size: {qwen3_model.lm_head.weight.shape[0]}\")\n",
+    "print(f\"New lm_head dtype: {qwen3_model.lm_head.weight.dtype}\")\n",
+    "print(f\"Copied {num_tokens_to_copy} embeddings from original (positions 0 to {num_tokens_to_copy - 1})\")\n",
+    "print(f\"Initialized {num_new_tokens} new embeddings (positions {num_tokens_to_copy} to {new_vocab_size - 1}) with mean + Gaussian noise (std={noise_std})\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "499bc4a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Files (1 / 1): 100%|██████████| 4.20GB / 4.20GB, 95.0MB/s  \n",
+      "New Data Upload: 100%|██████████|  135MB /  135MB, 70.6kB/s  \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/potsawee/qwen3x-tokenizer/commit/0edb09a3f9cbdde54ecee5132b8daa76c1ed1d9a', commit_message='Upload tokenizer', commit_description='', oid='0edb09a3f9cbdde54ecee5132b8daa76c1ed1d9a', pr_url=None, repo_url=RepoUrl('https://huggingface.co/potsawee/qwen3x-tokenizer', endpoint='https://huggingface.co', repo_type='model', repo_id='potsawee/qwen3x-tokenizer'), pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/potsawee/qwen3x-1.7B-base/commit/14cd3a126af7dfa8d4b518be4d9c4be439ac3934', commit_message='Upload Qwen3ForCausalLM', commit_description='', oid='14cd3a126af7dfa8d4b518be4d9c4be439ac3934', pr_url=None, repo_url=RepoUrl('https://huggingface.co/potsawee/qwen3x-1.7B-base', endpoint='https://huggingface.co', repo_type='model', repo_id='potsawee/qwen3x-1.7B-base'), pr_revision=None, pr_num=None)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Upload modified qwen3 tokenizer to Hugging Face\n",
-    "repo_name = \"potsawee/qwen3x-tokenizer\"  # Change this to your desired repo name\n",
-    "qwen3_tokenizer.push_to_hub(repo_name)"
+    "qwen3_model.push_to_hub(f\"potsawee/qwen3x-{model_size}-base\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "f114f507",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2097779712"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count the number of parameters in the model\n",
+    "# 0.6B --> 784652288\n",
+    "# 1.7B --> 2097779712\n",
+    "qwen3_model.num_parameters()"
    ]
   }
  ],
